fix CI failure due to name change to sophios (#306)
Co-authored-by: Vasu Jaganath <vasu.jaganath@axleinfo.com>

--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -90,13 +90,13 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Checkout workflow-inference-compiler
+      - name: Checkout sophios
         if: always()
         uses: actions/checkout@v3
         with:
-          repository: ${{ inputs.wic_owner }}/workflow-inference-compiler
+          repository: ${{ inputs.wic_owner }}/sophios
           ref: ${{ inputs.wic_ref }}
-          path: workflow-inference-compiler
+          path: sophios
 
       - name: Checkout biobb_adapters
         if: always()
@@ -127,11 +127,11 @@ jobs:
       # NOTE: pypy actually decreases performance for lint_and_test.yml (by a factor of ~2)
       # - name: Append pypy to conda environment files
       #   if: runner.os != 'Windows'
-      #   run: cd workflow-inference-compiler/install/ && echo "  - pypy" >> system_deps.yml
+      #   run: cd sophios/install/ && echo "  - pypy" >> system_deps.yml
 
       # - name: Append pypy to conda environment files
       #   if: runner.os == 'Windows'
-      #   run: cd workflow-inference-compiler/install/ && echo "  - pypy" >> system_deps_windows.yml
+      #   run: cd sophios/install/ && echo "  - pypy" >> system_deps_windows.yml
 
       - name: Setup miniforge (linux, macos)
         if: runner.os != 'Windows'
@@ -139,7 +139,7 @@ jobs:
         with:
           miniforge-variant: Miniforge-pypy3
           miniforge-version: 24.7.1-0
-          environment-file: workflow-inference-compiler/install/system_deps.yml
+          environment-file: sophios/install/system_deps.yml
           activate-environment: wic
           channels: conda-forge
           python-version: "3.9.*" # pypy is not yet compatible with 3.10 and 3.11
@@ -150,7 +150,7 @@ jobs:
         with:
           miniforge-variant: Miniforge-pypy3
           miniforge-version: 24.7.1-0
-          environment-file: workflow-inference-compiler/install/system_deps_windows.yml
+          environment-file: sophios/install/system_deps_windows.yml
           activate-environment: wic
           channels: conda-forge
           python-version: "3.9.*" # pypy is not yet compatible with 3.10 and 3.11
@@ -158,11 +158,11 @@ jobs:
       - name: ShellCheck Script Quality
         if: always()
         # "SC1017 (error): Literal carriage return. Run script through tr -d '\r' ."
-        run: shellcheck -e SC1017 $(find workflow-inference-compiler/ -name "*.sh" -and -not -path "./3/*")
+        run: shellcheck -e SC1017 $(find sophios/ -name "*.sh" -and -not -path "./3/*")
 
       - name: Install Workflow Inference Compiler
         if: always()
-        run: cd workflow-inference-compiler/ && pip install ".[all_except_runner_src]"
+        run: cd sophios/ && pip install ".[all_except_runner_src]"
 
       - name: Install Molecular Modeling Workflows
         if: always()
@@ -175,39 +175,39 @@ jobs:
 
       - name: Generate Sophios Python API Workflows (*.py -> *.wic)
         if: always()
-        run: cd workflow-inference-compiler/ && python -c 'import sophios; import sophios.plugins; sophios.plugins.blindly_execute_python_workflows()'
+        run: cd sophios/ && python -c 'import sophios; import sophios.plugins; sophios.plugins.blindly_execute_python_workflows()'
 
       - name: Generate Sophios Validation Jsonschema
         if: always()
-        run: cd workflow-inference-compiler/ && sophios --generate_schemas
+        run: cd sophios/ && sophios --generate_schemas
 
         # Please read docs/validation.md#Property-Based-Testing
         # This is essentially an integration test for all of the
         # Sophios Python API workflows as well as the Sophios Python API itself.
       - name: Validate sophios Python API Workflows (*.py -> *.wic)
         if: always()
-        run: cd workflow-inference-compiler/ && python -c 'import sophios; import sophios.plugins; sophios.plugins.blindly_execute_python_workflows()'
+        run: cd sophios/ && python -c 'import sophios; import sophios.plugins; sophios.plugins.blindly_execute_python_workflows()'
 
       - name: Build Documentation
         if: always()
-        run: cd workflow-inference-compiler/docs && make html
+        run: cd sophios/docs && make html
 
       - name: MyPy Check Type Annotations
         if: always()
-        run: cd workflow-inference-compiler/ && mypy src/ examples/ tests/
+        run: cd sophios/ && mypy src/ examples/ tests/
         # NOTE: Do not use `mypy .` because then mypy will check both src/ and build/ causing:
-        # src/workflow-inference-compiler/__init__.py: error: Duplicate module named "wic"
-        # (also at "./build/lib/workflow-inference-compiler/__init__.py")
+        # src/sophios/__init__.py: error: Duplicate module named "wic"
+        # (also at "./build/lib/sophios/__init__.py")
 
       - name: PyLint Check Code Quality
         if: always()
-        run: cd workflow-inference-compiler/ && pylint src/ examples/**/*.py tests/
+        run: cd sophios/ && pylint src/ examples/**/*.py tests/
         # NOTE: See fail-under threshold in .pylintrc
 
       - name: PEP8 Code Formatting
         if: always()
         id: autopep8
-        run: cd workflow-inference-compiler/ && autopep8 --exit-code --recursive --diff --max-line-length 120 examples/ src/ tests/
+        run: cd sophios/ && autopep8 --exit-code --recursive --diff --max-line-length 120 examples/ src/ tests/
       - name: Fail if autopep8 made changes
         if: steps.autopep8.outputs.exit-code == 2
         run: exit 1
@@ -216,13 +216,13 @@ jobs:
 
       - name: PyTest CWL Embedding Independence
         if: always()
-        run: cd workflow-inference-compiler/ && pytest -k test_cwl_embedding_independence # --cov --cov-config=.coveragerc_serial
+        run: cd sophios/ && pytest -k test_cwl_embedding_independence # --cov --cov-config=.coveragerc_serial
         # NOTE: This test MUST be run in serial! See is_isomorphic_with_timeout()
         timeout-minutes: 20 # backup timeout for windows
 
       - name: PyTest Inline Subworkflows
         if: always()
-        run: cd workflow-inference-compiler/ && pytest -k test_inline_subworkflows # --cov --cov-config=.coveragerc_serial
+        run: cd sophios/ && pytest -k test_inline_subworkflows # --cov --cov-config=.coveragerc_serial
         # NOTE: This test MUST be run in serial! See is_isomorphic_with_timeout()
         timeout-minutes: 20 # backup timeout for windows
 
@@ -231,7 +231,7 @@ jobs:
         # Avoid Windows and macOS due to 2X and 10X minute multipliers.
         # https://docs.github.com/en/billing/managing-billing-for-github-actions/about-billing-for-github-actions#minute-multipliers
         # Also, cannot run on Windows (natively) yet
-        run: cd workflow-inference-compiler/ && pytest -k test_scattering_scaling
+        run: cd sophios/ && pytest -k test_scattering_scaling
 
       # NOTE: The steps below are for repository_dispatch only. For all other steps, please insert above
       # this comment.
@@ -269,7 +269,7 @@ jobs:
         # https://github.com/actions/runner/issues/834#issuecomment-907096707
         # Use inputs.sender_repo to reply the original sender.
         if: always()
-        uses: ./workflow-inference-compiler/.github/my_actions/reply_sender/ # Must start with ./
+        uses: ./sophios/.github/my_actions/reply_sender/ # Must start with ./
         with:
           github_repository: ${{ github.repository }}
           event_type: ${{ inputs.event_type }}
