remove pypy3 miniforge & bump version to 24.7.1-2

--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -137,8 +137,8 @@ jobs:
         if: runner.os != 'Windows'
         uses: conda-incubator/setup-miniconda@v3.0.1
         with:
-          miniforge-variant: Miniforge-pypy3
-          miniforge-version: 24.7.1-0
+          miniforge-variant: Miniforge3
+          miniforge-version: 24.7.1-2
           environment-file: sophios/install/system_deps.yml
           activate-environment: wic
           channels: conda-forge
@@ -148,8 +148,8 @@ jobs:
         if: runner.os == 'Windows'
         uses: conda-incubator/setup-miniconda@v3.0.1
         with:
-          miniforge-variant: Miniforge-pypy3
-          miniforge-version: 24.7.1-0
+          miniforge-variant: Miniforge3
+          miniforge-version: 24.7.1-2
           environment-file: sophios/install/system_deps_windows.yml
           activate-environment: wic
           channels: conda-forge
