--- a/.github/workflows/run_workflows.yml
+++ b/.github/workflows/run_workflows.yml
@@ -126,8 +126,8 @@ jobs:
       if: always()
       uses: conda-incubator/setup-miniconda@v3.0.1
       with:
-        miniforge-variant: Miniforge-pypy3
-        miniforge-version: 24.7.1-0
+        miniforge-variant: Miniforge3
+        miniforge-version: 24.7.1-2
         environment-file: sophios/install/system_deps.yml
         activate-environment: wic_github_actions
         channels: conda-forge
