--- a/.github/workflows/run_workflows_weekly.yml
+++ b/.github/workflows/run_workflows_weekly.yml
@@ -84,12 +84,12 @@ jobs:
       if: always()
       uses: conda-incubator/setup-miniconda@v3.0.1
       with:
-        miniforge-variant: Miniforge  # NOT Miniforge-pypy3
+        miniforge-variant: Miniforge3  # NOT Miniforge-pypy3
         # Toil is (currently) incompatible with pypy. Miniforge-pypy3
         # installs pypy in the base environment (only). Although we are using
         # another environment, better to avoid the problem altogether by
         # not using Miniforge-pypy3
-        miniforge-version: 24.7.1-0
+        miniforge-version: 24.7.1-2
         environment-file: sophios/install/system_deps.yml
         activate-environment: wic_github_actions
         use-mamba: true
