--- a/.github/workflows/fuzzy_compile_weekly.yml
+++ b/.github/workflows/fuzzy_compile_weekly.yml
@@ -71,8 +71,8 @@ jobs:
         if: runner.os != 'Windows'
         uses: conda-incubator/setup-miniconda@v3.0.1
         with:
-          miniforge-variant: Miniforge-pypy3
-          miniforge-version: 24.7.1-0
+          miniforge-variant: Miniforge3
+          miniforge-version: 24.7.1-2
           environment-file: sophios/install/system_deps.yml
           activate-environment: wic
           channels: conda-forge
